# codex-watch

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  codex-watch-guardian@.service  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: tests.yml
codex_goal_watchdog/: __init__.py  __main__.py  guardian.py  launcher.py  monitor.py  paths.py  recovery.py  sessions.py  tmux_control.py
systemd/: codex-watch-guardian@.service
tests/: test_cli.py  test_guardian.py  test_launcher.py  test_monitor.py  test_packaging.py  test_paths.py  test_recovery.py  test_sessions.py  test_tmux_control.py
