[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-goal-watchdog"
version = "0.1.6"
description = "Keep long-running Codex CLI goals alive across recoverable terminal failures."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Codex Goal Watchdog contributors" }]
keywords = ["codex", "tmux", "watchdog", "recovery"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.scripts]
codex-watch = "codex_goal_watchdog.__main__:start_main"
codex-watch-guardian = "codex_goal_watchdog.__main__:guardian_main"

[tool.setuptools.packages.find]
include = ["codex_goal_watchdog*"]
exclude = ["tests*"]

[tool.setuptools.data-files]
"share/systemd/user" = ["systemd/codex-watch-guardian@.service"]
